MediaCloud/wwwroot/css/site.css
html {
  font-size: 14px;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

@media (min-width: 368px) {
    col-xsm {
        flex: 1 0 0%;
    }
}

html {
  position: relative;
  min-height: 100%;
}

body {
    margin-bottom: 60px;
}

.gradient-main {
    /* fallback for old browsers */
    background: #5063b9;
    /* Chrome 10-25, Safari 5.1-6 */
    background: -webkit-linear-gradient(to bottom, rgba(80, 99, 185, 1), rgba(77, 37, 116, 1));
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background: linear-gradient(to bottom, rgba(80, 99, 185, 1), rgba(77, 37, 116, 1));
    height: 100%;
    min-height: 77.8vmax;
}

.navbar {
    /* fallback for old browsers */
    background: #ddb56e;
    /* Chrome 10-25, Safari 5.1-6 */
    background: -webkit-linear-gradient(to bottom, rgba(77, 37, 116, 1), rgba(130, 84, 248, 1));
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background: linear-gradient(to bottom, rgba(77, 37, 116, 1), rgba(130, 84, 248, 1))
}

.footer {
    /* fallback for old browsers */
    background: #ddb56e;
    /* Chrome 10-25, Safari 5.1-6 */
    background: -webkit-linear-gradient(to bottom, rgba(130, 84, 248, 1), rgba(77, 37, 116, 1));
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background: linear-gradient(to bottom, rgba(130, 84, 248, 1), rgba(77, 37, 116, 1));
    min-width: 450px;
    position: absolute;
    bottom: 0;
    width: 100%;
}

.page-container {
    border-radius: .3rem !important;
    padding: 1rem !important;
    --bs-text-opacity: 1;
    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
}

.page-center-container {
    display: flex;
    justify-content: center;
}

.button-panel {
    display: flex !important;
    flex-direction: row !important;
    align-items: center !important;
    flex-wrap: wrap;
}

.picture-controls-container {
    position: absolute;
    right: 0;
    bottom: 0;
    background: white;
    border-radius: 1rem;
    max-height: 5rem;
    padding: .5rem;
    display: flex;
    align-items: center;
}

.rotate-button {
    width: 2rem;
    height: 2rem;
    display: flex;
    justify-content: center;
    margin-left: .5rem;
}

.arrow-button-right {
    cursor: pointer; 
    position: absolute; 
    right: 0; 
    width: 2rem; 
    background: deepskyblue; 
    padding: 0.5rem; 
    border-radius: 1rem;
}

.arrow-button-left {
    cursor: pointer; 
    position: absolute; 
    left: 0; 
    width: 2rem; 
    background: deepskyblue; 
    padding: 0.5rem; 
    border-radius: 1rem;
}

.control-button-panel {
    display: flex !important;
    justify-content: space-between !important;
    margin-bottom: 1rem !important;
}

.picture {
    transition: transform .3s; /* Animation */
}

.picture:hover {
    transform: scale(1.11);
    cursor: pointer;
}

.picture-image {
    transition: border-radius 0.6s; /* Animation */
    border-radius: 0.25rem;
}

.picture-image:hover {
    transition: border-radius 0.6s; /* Animation */
    border-radius: 2rem;
}

.image-column {
    min-width: 10rem;
}

.image-row {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    object-fit: fill;
    width: 100%;
    margin: 0;
}

.gallery {
   display: flex;
   margin-top: 2rem!important;
   margin-bottom: 2rem!important;
}

.gallery-item {
    min-width: 25rem;
}

.gallery-item-bubble {
    position: absolute; 
    min-width: 2.25rem; 
    text-align: center; 
    margin-bottom: 1.85rem; 
    margin-right: 0.25rem; 
    font-size: 1.5rem;
}

.list-clickable {
    transition: Background-color 0.6s
}

.list-clickable:hover {
    background-color: rgb(147, 144, 222);
    transition: Background-color 0.6s;
    cursor: pointer;
}

.whiteback-bar {
    background: white;
    border-radius: 1.5rem;
    padding: 1.5rem;
    margin: 1rem;
}

.table-item-padding {
    padding: 0.75rem!important;
}

.picture-card {
    margin-bottom: 1.5rem;
}

.picture-container {
    position:relative;
    display: inline-block;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

.picture-viewport {
    max-height: 85vmin;
    display: flex;
    justify-content: center;
}

.picture-viewer {
    object-fit: contain; 
    max-height: 80vmin;
    max-width: 90vw;
}

#btn-back-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    display: none;
}

.btn-inactive {
    border-color: darkgray;
}

.autocomplete {
    position: relative;
    display: inline-block;
}

.autocomplete-items {
    position: absolute;
    z-index: 99;
    top: 100%;
    left: 0;
    right: 0;
}

.load-spinner {
    display: block; 
    width:3rem; 
    height:3rem;
}

.page-autoload-notifier {
    text-align: center; 
    display: none;
}

.big-form-check-input {
    min-width: 2rem !important; 
    min-height: 2rem !important;
}

.chart-canvas {
    min-height: 20rem;
    max-height: 60rem;
}

.chart-canvas-block {
    min-height: 30rem;
    min-width: 30rem;
    max-width: 75rem;
    max-height: 75rem;
}

